# AI-analyst

./: .gitignore  PROMPTS_GUIDE.md  README.md  pyproject.toml
feedback/: README.md  sample_feedback.txt
knowledge/: catalog.txt  d11_stitch_catalog.md  d11_stitch_tables.txt  domain.txt  examples.txt  metrics.txt
knowledge/queries/: AB_CRIC_INFO_last_stream_users.sql  Chats, Predictions, reactions, superchats.sql  Code.sql  Creator level strem minutes.sql  Day level creatos, active streams, moments uploaded..sql  _spent.sql  ab_cric_info_last_stream_users.txt
src/insights_mcp/: __init__.py  athena.py  feedback_agent.py  knowledge_gen.py  server.py
