[project]
name = "insights-mcp"
version = "0.1.0"
description = "Analytics MCP server for querying d11_stitch data warehouse via Athena"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "boto3>=1.35.0",
]

[project.scripts]
insights-mcp = "insights_mcp.server:main"
insights-mcp-knowledge-gen = "insights_mcp.knowledge_gen:main"
insights-mcp-feedback-agent = "insights_mcp.feedback_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insights_mcp"]
